--- a/canvas.html
+++ b/canvas.html
@@ -8,6 +8,6 @@
    
    <body>
       <canvas id="canvas" width="1920" height="1080"></canvas>
-      <script type="module" src="lib/Logic.js"></script>
+      <script src="lib/Logic.js"></script>
    </body>
 </html>
